--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
         # Compile the sketch to get the HEX and ELF files
         ./arduino-cli compile -b arduino:avr:uno nmea-checksum.ino
         # Install dependencies for building SimAVR
-        apt update
-        apt install -y build-essential libelf-dev avr-libc gcc-avr freeglut3-dev libncurses5-dev pkg-config
+        sudo apt-get update
+        sudo apt-get install -y build-essential libelf-dev avr-libc gcc-avr freeglut3-dev libncurses5-dev pkg-config
         # Close the SimAVR repo and build it
         git clone https://github.com/buserror/simavr.git
         cd simavr
