--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
       run: |
         set -x
         # Download and install the latest Arduino CLI
+        mkdir -p /home/runner/work/arduino-nmea-checksum/arduino-nmea-checksum/bin
         curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | BINDIR=/home/runner/work/arduino-nmea-checksum/arduino-nmea-checksum/bin sh
         # Update index, install the AVR core and compile the sketch (into ELF and HEX) for the Uno
         arduino-cli core update-index
