--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - Name: Install latest Arduino CLI
+    - name: Install latest Arduino CLI
       uses: Arduino/actions/setup-arduino-cli@master
     - name: Validate expected output
       run: |
