--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,32 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install latest Arduino CLI
       uses: arduino/actions/setup-arduino-cli@master
+    - name: Try using the Arduino Builder
+      continue-on-error: true
+      run: |
+        set -x
+        version=1.5.0
+        # Download and extract the Arduino Builder
+        curl -L -o arduino-builder-${version}.tar.xz https://github.com/arduino/arduino-builder/releases/download/${version}/arduino-builder-${version}.tar.xz
+        tar -xvf arduino-builder-${version}.tar.xz
+        cd arduino-builder-${version}
+        # Install Go dependencies and build the executable
+        go version
+        go get github.com/go-errors/errors
+        go get github.com/stretchr/testify
+        go get github.com/jstemmer/go-junit-report
+        go get -u github.com/arduino/go-paths-helper
+        go get -u github.com/arduino/go-properties-orderedmap
+        go get -u github.com/arduino/go-timeutils
+        go get google.golang.org/grpc
+        go get github.com/golang/protobuf/proto
+        go get golang.org/x/net/context
+        go get github.com/fsnotify/fsnotify
+        go get github.com/schollz/closestmatch
+        go get github.com/arduino/arduino-builder
+        go build github.com/arduino/arduino-builder/arduino-builder
+        # TODO
+        ls
     - name: Validate expected output
       run: |
         set -x
@@ -30,27 +56,3 @@ jobs:
         cat nmea-checksum.ino.log
         # Check if the produced file matches the expected file
         diff nmea-checksum.ino.log ../../nmea-checksum.ino.test
-    - name: Try using the Arduino Builder
-      continue-on-error: true
-      run: |
-        set -x
-        version=1.5.0
-        # Download and extract the Arduino Builder
-        curl -L -o arduino-builder-${version}.tar.xz https://github.com/arduino/arduino-builder/releases/download/${version}/arduino-builder-${version}.tar.xz
-        tar -xvf arduino-builder-${version}.tar.xz
-        # Install Go dependencies and build the executable
-        go get github.com/go-errors/errors
-        go get github.com/stretchr/testify
-        go get github.com/jstemmer/go-junit-report
-        go get -u github.com/arduino/go-paths-helper
-        go get -u github.com/arduino/go-properties-orderedmap
-        go get -u github.com/arduino/go-timeutils
-        go get google.golang.org/grpc
-        go get github.com/golang/protobuf/proto
-        go get golang.org/x/net/context
-        go get github.com/fsnotify/fsnotify
-        go get github.com/schollz/closestmatch
-        go get github.com/arduino/arduino-builder
-        go build github.com/arduino/arduino-builder/arduino-builder
-        # TODO
-        ls
