--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
         version=1.5.0
         # Download the Arduino IDE for the `hardware` folder
         curl https://downloads.arduino.cc/arduino-1.8.10-linux64.tar.xz -O
-        tar xvf arduino-1.8.10-linux64.tar.xz
+        tar xf arduino-1.8.10-linux64.tar.xz
         # Download and extract the Arduino Builder
         curl -L -o arduino-builder-${version}.tar.xz https://github.com/arduino/arduino-builder/releases/download/${version}/arduino-builder-${version}.tar.xz
-        tar -xvf arduino-builder-${version}.tar.xz
+        tar xf arduino-builder-${version}.tar.xz
         cd arduino-builder-${version}
         # Install Go dependencies and build the executable
         go version
@@ -35,7 +35,8 @@ jobs:
         go get github.com/arduino/arduino-builder
         go build github.com/arduino/arduino-builder
         # Run the Arduino Builder
-        ./arduino-builder -hardware arduino-1.8.10/hardware -fqbn arduino:avr:uno nmea-checksum.ino
+        ./arduino-builder -hardware arduino-1.8.10/hardware -tools arduino-1.8.10/tools -tools arduino-1.8.10/hardware/tools -build-path . -fqbn arduino:avr:uno nmea-checksum.ino
+        ls
     - name: Validate expected output
       run: |
         set -x
