Use build path to see if it outputs to root correctly

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
       with:
         sketch-paths: |
           - .
+        cli-compile-flags: |
+          - --build-path .
     - name: Install Arduino CLI
       uses: arduino/setup-arduino-cli@v1.1.1 # https://github.com/arduino/setup-arduino-cli
     - name: Validate expected output
